// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EnergySection > matches snapshot at value 0 without divider 1`] = `
<DocumentFragment>
  <section
    class="energy-section"
  >
    <div
      class="energy-section-header"
    >
      <div
        class="energy-section-label-group"
      >
        <span
          aria-hidden="true"
          class="energy-section-dot"
          style="background-color: rgb(143, 165, 139);"
        />
        <span
          class="energy-section-label"
        >
          Emotional
        </span>
      </div>
      <div
        aria-live="off"
        class="energy-section-value"
      >
        <span
          class="energy-section-value-number"
          style="color: rgb(143, 165, 139);"
        >
          0
        </span>
        <span
          class="energy-section-value-max"
        >
          / 10
        </span>
      </div>
    </div>
    <input
      aria-label="Emotional energy level"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="0"
      class="energy-slider"
      max="10"
      min="0"
      step="1"
      style="--fill: 0%; --track-color: #8fa58b;"
      type="range"
      value="0"
    />
  </section>
</DocumentFragment>
`;

exports[`EnergySection > matches snapshot at value 5 with divider 1`] = `
<DocumentFragment>
  <section
    class="energy-section"
  >
    <div
      class="energy-section-header"
    >
      <div
        class="energy-section-label-group"
      >
        <span
          aria-hidden="true"
          class="energy-section-dot"
          style="background-color: rgb(196, 130, 109);"
        />
        <span
          class="energy-section-label"
        >
          Physical
        </span>
      </div>
      <div
        aria-live="off"
        class="energy-section-value"
      >
        <span
          class="energy-section-value-number"
          style="color: rgb(196, 130, 109);"
        >
          5
        </span>
        <span
          class="energy-section-value-max"
        >
          / 10
        </span>
      </div>
    </div>
    <input
      aria-label="Physical energy level"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="5"
      class="energy-slider"
      max="10"
      min="0"
      step="1"
      style="--fill: 50%; --track-color: #c4826d;"
      type="range"
      value="5"
    />
    <hr
      class="energy-section-divider"
    />
  </section>
</DocumentFragment>
`;
